objects/Referral__c.object
<CustomObject>
    <description>To store referral information, including details of referrals made to other agencies or services for additional support.</description>
    <fields>
        <fullName>ClientCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Case</label>
        <referenceTo>ClientCase__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntakeRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intake Request</label>
        <referenceTo>Intake__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferralNotes__c</fullName>
        <label>Referral Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReferralOutcome__c</fullName>
        <label>Referral Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client received assistance</fullName>
                </value>
                <value>
                    <fullName>Referred agency unable to provide services</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferralType__c</fullName>
        <label>Referral Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Behavioral Counseling</fullName>
                </value>
                <value>
                    <fullName>Credit Counseling</fullName>
                </value>
                <value>
                    <fullName>Emergency Shelter</fullName>
                </value>
                <value>
                    <fullName>Social Service Agency</fullName>
                </value>
                <value>
                    <fullName>Mortgage Originator</fullName>
                </value>
                <value>
                    <fullName>Real Estate Agent</fullName>
                </value>
                <value>
                    <fullName>Home Inspector</fullName>
                </value>
                <value>
                    <fullName>Homeowner’s Insurance Agent</fullName>
                </value>
                <value>
                    <fullName>Attorney/Closing Agent</fullName>
                </value>
                <value>
                    <fullName>Tax Consultant</fullName>
                </value>
                <value>
                    <fullName>Financial Institute Representative</fullName>
                </value>
                <value>
                    <fullName>Government Affiliate</fullName>
                </value>
                <value>
                    <fullName>Debt Management Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferredtoAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred to Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferredtoContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred to Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Affiliate</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals (Referred to Contact)</relationshipLabel>
        <relationshipName>Referrals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Referral</label>
    <nameField>
        <label>Referral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>